# CosmoFlow

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
action/: Cargo.toml
action/src/: action.rs  condition.rs  lib.rs  tests.rs
builtin/: Cargo.toml
builtin/src/: basic.rs  lib.rs  llm.rs  nodes.rs
cookbook/: README.md
cookbook/async-workflows/: Cargo.toml  README.md
cookbook/async-workflows/src/: main.rs
cookbook/better-ls/: Cargo.toml  README.md
cookbook/better-ls/src/: main.rs  nodes.rs  utils.rs
cookbook/chat-assistant/: Cargo.toml
cookbook/lexer/: Cargo.toml  README.md  dfa_diagram.md
cookbook/lexer/src/: flows.rs  main.rs  nodes.rs
cookbook/llm-request-handler/: Cargo.toml
cookbook/llm-request-handler/src/: main.rs
cookbook/unified-workflow/: Cargo.toml  README.md
cookbook/unified-workflow/src/: flow_composition_sync.rs  main.rs  unified_counter.rs  unified_shared_store.rs
cosmoflow/: Cargo.toml  README.md
cosmoflow/examples/: README.md  custom_node.rs  simple_loops.rs
cosmoflow/src/: lib.rs
cosmoflow/src/action/: README.md  action_core.rs  condition.rs  mod.rs  tests.rs
cosmoflow/src/builtin/: README.md  basic.rs  llm.rs  mod.rs  nodes.rs
cosmoflow/src/flow/: README.md  async.rs  errors.rs  macros.rs  mod.rs  route.rs
cosmoflow/src/node/: README.md  async.rs  errors.rs  mod.rs  traits.rs  unified_trait.rs
cosmoflow/src/shared_store/: README.md  mod.rs  new_design.rs
cosmoflow/src/shared_store/backends/: file.rs  memory.rs  redis.rs
cosmoflow/src/storage/: README.md  mod.rs
cosmoflow/src/storage/backends/: file.rs  memory.rs  mod.rs  redis.rs
docs/: README.md  architecture.md  features.md  getting-started.md
examples/: Cargo.toml  README.md  chat_loop.rs  custom_node.rs  custom_node_sync.rs  flow_composition_sync.rs  flow_macro.rs  hello_world.rs  hello_world_sync.rs  llm_request.md  llm_request.rs  simple_loops.rs  simple_loops_sync.rs  simplified_example.rs  unified_counter.rs  unified_counter_sync.rs  unified_hello_world.rs  unified_hello_world_sync.rs  unified_shared_store.rs
flow/: Cargo.toml  README.md
flow/src/: errors.rs  lib.rs  route.rs
node/: Cargo.toml  README.md
node/src/: errors.rs  lib.rs  traits.rs
shared_store/: Cargo.toml
shared_store/src/: lib.rs
shared_store/src/storage/: mod.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/src/backends/: file.rs  memory.rs  mod.rs
