[workspace]
members = ["cosmoflow", "examples"]
default-members = ["cosmoflow"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies for workspace members
async-openai = "0.28"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
redis = "0.31"
tempfile = "3.0"
thiserror = "2.0"
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cosmoflow = { path = "cosmoflow" }
