[package]
name = "cosmoflow"
version = "0.2.0"
edition = "2024"
authors = ["echozyr2001 <echo.zyr.2001@gmail.com>"]
description = "CosmoFlow - A type-safe workflow engine for Rust, inspired by PocketFlow and optimized for LLM applications"
license = "MIT"
keywords = ["llm", "ai", "workflow", "cosmoai"]
homepage = "https://github.com/echozyr2001/CosmoFlow"
repository = "https://github.com/echozyr2001/CosmoFlow"
readme = "README.md"

[dependencies]
async-openai = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []

storage-memory = []
storage-file = []
storage-redis = ["redis"]
storage-full = ["storage-memory", "storage-file", "storage-redis"]

builtin = []

minimal = []
basic = ["storage-memory"]
standard = ["storage-memory", "builtin"]
full = ["storage-full", "builtin"]
