[package]
name = "cosmoflow"
version = "0.4.0"
edition = "2024"
authors = ["echozyr2001 <echo.zyr.2001@gmail.com>"]
description = "CosmoFlow - A type-safe workflow engine for Rust, inspired by PocketFlow and optimized for LLM applications"
license = "MIT"
keywords = ["llm", "ai", "workflow", "cosmoai"]
homepage = "https://github.com/echozyr2001/CosmoFlow"
repository = "https://github.com/echozyr2001/CosmoFlow"
readme = "README.md"

[dependencies]
async-trait = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
uuid = { workspace = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["basic"]

# Async support
async = ["async-trait", "tokio"]

# Storage backends
storage-memory = []
storage-file = []
storage-redis = ["redis"]
storage-full = ["storage-memory", "storage-file", "storage-redis"]

# Convenience feature combinations
minimal = [] # Core engine only (bring your own storage)
basic = ["storage-memory"] # Basic usable configuration with memory storage
standard = [
  "storage-memory",
  "async",
] # Standard configuration with async support
full = ["storage-full", "async"] # Full feature set with all storage backends
