[package]
name = "cosmoflow-examples"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
cosmoflow = { path = "../cosmoflow" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "2.0"

[[bin]]
name = "hello_world"
path = "hello_world.rs"

[[bin]]
name = "custom_node"
path = "custom_node.rs"

[[bin]]
name = "unified_hello_world"
path = "unified_hello_world.rs"

[[bin]]
name = "unified_counter"
path = "unified_counter.rs"

[[bin]]
name = "flow_macro"
path = "flow_macro.rs"

[features]
default = []
minimal = ["cosmoflow/minimal"]
basic = ["cosmoflow/basic"]
standard = ["cosmoflow/standard"]
full = ["cosmoflow/full"]
