[package]
name = "cosmoflow-examples"
version = "0.4.0"
edition = "2024"
publish = false

[dependencies]
cosmoflow = { path = "../cosmoflow", features = ["storage-memory"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "simple_loops"
path = "simple_loops.rs"

[[bin]]
name = "hello_world"
path = "hello_world.rs"

[[bin]]
name = "custom_node"
path = "custom_node.rs"

[[bin]]
name = "unified_hello_world"
path = "unified_hello_world.rs"

[[bin]]
name = "unified_counter"
path = "unified_counter.rs"

[[bin]]
name = "flow_macro"
path = "flow_macro.rs"

[[bin]]
name = "unified_shared_store"
path = "unified_shared_store.rs"

[[bin]]
name = "llm_request"
path = "llm_request.rs"

[[bin]]
name = "chat_loop"
path = "chat_loop.rs"

[features]
default = []
minimal = ["cosmoflow/minimal"]
basic = ["cosmoflow/basic"]
standard = ["cosmoflow/standard"]
full = ["cosmoflow/full"]
