[package]
name = "cosmoflow-examples"
version = "0.4.0"
edition = "2024"
publish = false

[dependencies]
cosmoflow = { path = "../cosmoflow", default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"], optional = true }

[[bin]]
name = "simple_loops"
path = "simple_loops.rs"
required-features = ["async"]

[[bin]]
name = "hello_world"
path = "hello_world.rs"
required-features = ["async"]

[[bin]]
name = "custom_node"
path = "custom_node.rs"
required-features = ["async"]

[[bin]]
name = "unified_hello_world"
path = "unified_hello_world.rs"
required-features = ["async"]

[[bin]]
name = "unified_counter"
path = "unified_counter.rs"
required-features = ["async"]

[[bin]]
name = "flow_macro"
path = "flow_macro.rs"
required-features = ["async"]

[[bin]]
name = "unified_shared_store"
path = "unified_shared_store.rs"
required-features = ["async"]

[[bin]]
name = "llm_request"
path = "llm_request.rs"
required-features = ["async"]

[[bin]]
name = "chat_loop"
path = "chat_loop.rs"
required-features = ["async"]
[[bin]]
name = "custom_node_sync"
path = "custom_node_sync.rs"
required-features = ["sync-only"]

[[bin]]
name = "unified_hello_world_sync"
path = "unified_hello_world_sync.rs"
required-features = ["sync-only"]

[[bin]]
name = "flow_composition_sync"
path = "flow_composition_sync.rs"
required-features = ["sync-only"]

[[bin]]
name = "hello_world_sync"
path = "hello_world_sync.rs"
required-features = ["sync-only"]

[[bin]]
name = "simple_loops_sync"
path = "simple_loops_sync.rs"
required-features = ["sync-only"]

[[bin]]
name = "unified_counter_sync"
path = "unified_counter_sync.rs"
required-features = ["sync-only"]

[features]
default = []
async = [
  "tokio",
  "async-trait",
  "reqwest",
  "cosmoflow/async",
  "cosmoflow/storage-memory",
]
sync = ["cosmoflow/storage-memory"]
sync-only = ["sync"]
