[package]
name = "node"
version = "0.1.0"
edition = "2024"
description = "Execution nodes for CosmoFlow"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
shared_store = { workspace = true }
action = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
shared_store = { workspace = true, features = ["storage-memory"] }

[features]
default = []

# Storage backend features - these are passed through to shared_store
storage-memory = ["shared_store/storage-memory"]
storage-file = ["shared_store/storage-file"]
storage-full = ["shared_store/storage-full"]
