[package]
name = "node"
version = "0.1.0"
edition = "2024"
description = "Execution nodes for CosmoFlow"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

shared_store = { workspace = true }
storage = { workspace = true }
action = { workspace = true }

[dev-dependencies]
storage = { workspace = true, features = ["memory"] }

[features]
default = []
