[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "Storage backends for CosmoFlow"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []

memory = []
file = []
full = ["memory", "file"]
