[package]
name = "better-ls"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "better-ls"
path = "src/main.rs"

[dependencies]
cosmoflow = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
