[package]
name = "llm-request-handler"
version = "0.1.0"
edition = "2021"
description = "Efficient LLM request handling patterns with CosmoFlow"

[dependencies]
cosmoflow = { workspace = true, features = ["async", "storage-memory"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
thiserror = { workspace = true }
