[package]
name = "unified-workflow"
version = "0.1.0"
edition = "2021"
description = "Advanced workflow composition and unified sync/async patterns"

[dependencies]
cosmoflow = { workspace = true, features = ["async", "storage-memory"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
